# Leafletpilot.com

./: .dockerignore  .env.production.example  .gitignore  CLAUDE.md  Dockerfile.frontend  README.md  docker-compose.production.yml  index.html  package-lock.json  package.json
backend/: .env.example  .env.production.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260702_0001_initial_core_catalog_models.py  20260702_0002_campaign_workflow_models.py  (+15 more)
backend/app/: main.py
backend/leafletpilot_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: acceptance_flyer.py  bootstrap_production_templates.py  create_admin.py  create_platform_admin.py  link_telegram_account.py  reset_manual_acceptance_db.py  seed_dev_data.py  seed_phase_d.py  seed_phase_e.py  seed_phase_f.py
backend/tests/: conftest.py  test_a4_quality_gate.py  test_auth_api.py  test_campaign_api.py  test_campaign_parser.py  test_catalog_api.py  test_demo_tenant.py  test_demo_tenant_integration.py  test_health.py  test_invitation_email.py  test_models.py  test_phase20a_hardening.py  test_phase_e_templates_acceptance.py  test_phase_f_seed.py  test_platform_catalog_acceptance.py  test_platform_catalog_routes.py  test_platform_invitation_delivery.py  test_platform_onboarding.py  test_preview_renderer.py  test_product_matching.py  test_rendering.py  test_seed_dev_data.py  test_shared_catalog_foundation.py  test_supermarket_visual_template.py  test_telegram_bot.py  test_template_permissions.py  test_test_database_isolation.py
(+202 files in other folders)
