[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "leafletpilot-backend"
version = "0.1.0"
description = "FastAPI backend scaffold for LeafletPilot."
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.3",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.6",
    "httpx>=0.28.1",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "sqlalchemy>=2.0.36",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.4",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
